[package]
name = "svelte-vello"
version = "0.1.0"
authors = ["Andrew Mueller <amueller@caltech.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
vello = "0.4.0"
wasm-bindgen-futures = "0.4.49"
reactive_graph = "0.1.7"
leptos = "0.7.5"
# web-sys = "0.3.76"

[dependencies.web-sys]
version = "0.3.76"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "Node",
    "Window",
    "VideoEncoder",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O']
